# oop-bank-account

./: pyproject.toml
.github/workflows/: ci.yml
src/bank_account/: account.py
