[project]
name = "oop-bank-account"
version = "0.1.0"
description = ""
authors = [
    {name = "DikshaKhandelwal",email = "diksha1010.dk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "oop_bank_account", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=bank_account --cov-fail-under=0"
[tool.pylint]
disable = ["missing-module-docstring"]
